Task 1, 3, and Optional 5

--- a/Hoskins_Task1.ipynb
+++ b/Hoskins_Task1.ipynb
@@ -714,6 +714,7 @@
     }
    ],
    "source": [
+    "#Reads the live data and plots it on the method world map\n",
     "live = pd.read_csv('https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/1.0_day.csv')\n",
     "plt.show(worldmap(live))"
    ]
@@ -975,6 +976,7 @@
     }
    ],
    "source": [
+    "#drops unused columns and displays top 20 magnitudes from the Live dataframe\n",
     "print(\"The Most Severe activity in the last 24 hours is as follows: \")\n",
     "sx = live.drop(columns = ['depth', 'magType','nst','gap','dmin','rms','net','id','updated', \n",
     "'type','horizontalError','depthError',\t'magError',\t'magNst','status','locationSource',\t'magSource'])\n",
