Task 1, Task 3, Task 5

--- a/Hoskins_Task1_Task3_Task5.ipynb
+++ b/Hoskins_Task1_Task3_Task5.ipynb
@@ -238,7 +238,7 @@
     "print(\"Which is located approximately: \", zed.iat[0,5])\n",
     "print()\n",
     "zed = (df.loc[df['mag'] == df['mag'].min()])\n",
-    "print(\"The Largest Magnitude Earthquake recorded in the last 30 days was at a mag of: \", df['mag'].min())\n",
+    "print(\"The Smallest Magnitude Earthquake recorded in the last 30 days was at a mag of: \", df['mag'].min())\n",
     "print(\"Which is located approximately: \", zed.iat[0,5])\n",
     "print()\n",
     "print(\"Within the last 30 days there are currently: \", len(df.index), \"recorded seizmic activities worldwide\")\n",
